--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+UNRELEASED
+
+  - Fix CSS selector so that script tags present on fengari-web load are run
+
+
 0.1.0 - 2018-04-01
 
   - Runs `<script type="application/lua">` tags from HTML
