--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.1.3 - 2018-11-11
+
+  - Fix issues building with newer webpack/babel
+
+
 0.1.2 - 2018-04-23
 
   - Change check for non-webworker to a check for document object
