--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.1.4 - 2018-11-19
+
+  - Release is to fix broken npm package
+
+
 0.1.3 - 2018-11-11
 
   - Fix issues building with newer webpack/babel
